--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 <h3>New code changed</h3>
 <p>More paragraph</p>
 <p>I am learning coding and coding is so much fun</p>
+<img src="alveena.jpg" alt="">
+<img src="Alveena1.jpg"alt="">
 </body>
 </html>
